Update packages and README, fix package compatibilities

--- a/src/styles/bulma.sass
+++ b/src/styles/bulma.sass
@@ -1,4 +1,9 @@
-@import "utilities/initial-variables.sass"
+@import "utilities/_all.sass"
+@import "base/_all.sass"
+@import "layout/_all.sass"
+@import "elements/button.sass"
+@import "elements/title.sass"
+
 
 $blue: #72d0eb
 $pink: #ffb3b3
@@ -8,5 +13,3 @@ $primary: $pink
 $primary-invert: $pink-invert
 $danger: $orange
 $family-primary: $family-roboto
-
-@import "../bulma.sass"
